apps/base/media/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      nodeSelector:
        kubernetes.io/hostname: worker-node-1
      # Security context at pod level
      securityContext:
        fsGroup: 993
        supplementalGroups:
          - 44 # video group
          - 104 # render group
          - 993 # jellyfin group
      # dnsPolicy: None
      # dnsConfig:
      #   nameservers:
      #     - 192.168.50.20

      containers:
        - name: jellyfin
          image: ghcr.io/jellyfin/jellyfin:12.2@sha256:c3efa69a22f2691fc88d6bb035e87a8560e395a6047f062fb381c61c3185e8f5
          ports:
            - containerPort: 8096
              name: http-web
            - containerPort: 8920
              name: https-web
            - containerPort: 1900
              protocol: UDP
              name: dlna-udp
            - containerPort: 7359
              protocol: UDP
              name: discovery

          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
              gpu.intel.com/i915: "1"
            limits:
              # memory: "4Gi"
              # cpu: "4000m"
              gpu.intel.com/i915: "1"

          # Security context - no privileged mode needed
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
              add:
                - CHOWN
                - SETUID
                - SETGID
                - DAC_OVERRIDE
                - KILL

          volumeMounts:
            - name: media
              mountPath: /data/media
              subPath: media
              readOnly: true
            - name: config
              mountPath: /config
            - name: cache
              mountPath: /cache
            - name: transcodes
              mountPath: /config/transcodes
          startupProbe:
            httpGet:
              path: /health
              port: 8096
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 360
          readinessProbe:
            httpGet:
              path: /health
              port: 8096
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media-data
        - name: config
          hostPath:
            path: /var/lib/jellyfin-config
            type: Directory
        - name: cache
          emptyDir: {}
        - name: transcodes
          emptyDir: {}
