apps/base/media/jellyfin/service-lan-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-lan-nodeport
spec:
  type: NodePort
  selector:
    app: jellyfin
  ports:
    - name: http
      port: 8096
      targetPort: 8096
      nodePort: 30096
